# Data-Scientist

./: .gitignore
1 - Module/: README.md
10-Multiprocessing & Threading/: README.md
11-Asyncio/: README.md
12-UV Package manager/: README.md
13-Arima/: README.md  arima.ipynb
14-NN/: README.md  neuralnetwork.ipynb
15-plotly/: plotly.ipynb
2 - Dictionary/: README.md
3- Classes/: README.md
4-Virtual_Environment/: README.md  Untitled.ipynb
4-Virtual_Environment/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
5-Json/: README.md
6-regular_expressions/: README.md
7-typing/: README.md
8-Socket/: README.md
9-Dunder Methods/: README.md
Algorithms/DecisionTree/: Decision Tree ex1.ipynb  Decision Tree ex2.ipynb  README.md  Untitled.ipynb
Assignments/HTTP_Server/: Python Mini-Project_ Barebones _Read-Only_ HTTP Server.docx  README.md  data.json  server.ipynb  server.py
Assignments/Implement Algorithms/: README.md  arima.ipynb  decision_trees.ipynb  kmeans_algorithm.ipynb  neuralnetwork.ipynb  svm.ipynb
Assignments/Onboarding Tracker/: README.md  main.py  plan.json  progress.json  pyproject.toml  requirements.txt
Assignments/Onboarding Tracker/src/: __init__.py
Assignments/Onboarding Tracker/src/plan/: manager.py  models.py  plan_loader.py  plans.py
Assignments/Onboarding Tracker/src/utils/: display.py  utils.py
Assignments/Onboarding Tracker/tests/: test_display.py  test_manager.py  test_plan_loader.py  test_utils.py
ciml labs/lab1-DTs-and-overfitting/: data.py  main.py  pyproject.toml  util.py
