[project]
name = "onboarding-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

